[package]
name = "fussy-food"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for FussyFood operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
